# Copyright (c) 2025 WSO2 LLC. (https://www.wso2.com).
#
# WSO2 LLC. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

appId: ${BUNDLE_IDENTIFIER}
---
- launchApp
- assertVisible: "tab_library"
- tapOn: "tab_library"
- scrollUntilVisible:
    element: ".*library_article_18.*" # Pagination limit is 12 so an article with index > 11 (starting index is 0) should load and be visible
    direction: DOWN
    speed: 100
    timeout: 15000
- tapOn: ".*Search by keywords.*"
- inputText: "abcde"
- assertVisible: ".*library_empty_text.*"
- eraseText
- inputText: "WSO2"
- hideKeyboard
- tapOn: ".*library_article_0.*"
- tapOn: 
    id: "breadcrumb"
    text: "Return to WSO2"
- tapOn: ".*Search by keywords.*"
- eraseText
- hideKeyboard
